<resources>
    <string name="app_name">CS3270A7 Heath</string>
    <string name="id">ID:</string>
    <string name="name_required">Name(Required):</string>
    <string name="course_code">Course Code:</string>
    <string name="start_at">Start At:</string>
    <string name="end_at">End At:</string>
    <string name="save">Save</string>
    <string name="retrieve_courses">Retrieve Courses</string>
    <string name="edit_selected_course">Edit Selected Course</string>
    <string name="delete_selected_course">Delete Selected Course</string>
    <string name="add_new_course">Add New Course</string>
    <string name="details_of_selected_course">Details of Selected Course</string>

    <!-- TODO: Remove or change this placeholder text -->

</resources>